Fixed total file size, misspelling, download button availability, UI alignment, etc.

--- a/angular/src/app/metrics/metrics.component.css
+++ b/angular/src/app/metrics/metrics.component.css
@@ -40,9 +40,16 @@
 .mobile-grid-container {
     /* border: 2px solid rgb(218, 218, 218); */
     margin: 1em auto 0em auto;
-    width: 95%;
+    width: 100%;
     height: fit-content;
-    padding: 20px 20px 20px 20px;
+    padding: 10px 0px;
+}
+
+.mobile-button-container {
+    margin: 0 auto; 
+    text-align:center;
+    width: 100%;
+    padding: 10px 0px;
 }
 
 .child{
